change faq name

--- a/sections/faq.liquid
+++ b/sections/faq.liquid
@@ -112,7 +112,7 @@
   ],
   "presets": [
     {
-      "name": "FAQ",
+      "name": "FAQs",
       "blocks": [
         {
           "type": "faq",
